cmake_minimum_required(VERSION 3.4)
project(plytapus)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

include(TestBigEndian)
include(GenerateExportHeader)

option(MSVC_STATIC "Build static library in MSVC")
set(MAKE_STATIC plytapus0)
set(MAKE_SHARED plytapus1)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" AND MSVC_STATIC)
  set(MAKE_SHARED "")
endif ()
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" AND NOT MSVC_STATIC)
  set(MAKE_STATIC "")
endif ()

option(MSVC_FILENAME_16 "Use UTF-16 filenames in MSVC")

file(GLOB LIB_SOURCES "plytapus/*.cpp")
file(GLOB TEST_SOURCES "test/*.cpp")

set(PLYTAPUS_MAJOR_VERSION 0)
set(PLYTAPUS_MINOR_VERSION 6)
set(PLYTAPUS_PATCH_VERSION 0)
set(PLYTAPUS_VERSION ${PLYTAPUS_MAJOR_VERSION}.${PLYTAPUS_MINOR_VERSION}.${PLYTAPUS_PATCH_VERSION})
set(COPY_YEAR 2020)

include_directories("plytapus")

if (MAKE_STATIC)
add_library(plytapus0 STATIC ${LIB_SOURCES})
endif ()
if (MAKE_SHARED)
add_library(plytapus1 SHARED ${LIB_SOURCES})
endif ()
add_executable(plytapus_test ${TEST_SOURCES})
if (MAKE_STATIC)
target_link_libraries(plytapus_test plytapus0)
set_target_properties(plytapus0 PROPERTIES OUTPUT_NAME "plytapus" VERSION ${PLYTAPUS_VERSION})
else ()
target_link_libraries(plytapus_test plytapus1)
endif ()
if (MAKE_SHARED)
set_target_properties(plytapus1 PROPERTIES OUTPUT_NAME "plytapus" VERSION ${PLYTAPUS_VERSION})
endif ()
install(TARGETS ${MAKE_SHARED} ${MAKE_STATIC} DESTINATION lib)
install(FILES plytapus/plytapus.h DESTINATION include)
install(FILES ${PROJECT_BINARY_DIR}/config.h plytapus/textio.h DESTINATION include/plytapus)

include_directories(${PROJECT_BINARY_DIR})
configure_file(config.h.in config.h)
configure_file(test/data/test.ply test.ply COPYONLY)
configure_file(test/data/test_bin.ply test_bin.ply COPYONLY)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT plytapus_test)

set(CPACK_PACKAGE_VERSION_MAJOR ${PLYTAPUS_MAJOR_VERSION})
set(CPACK_PACKAGE_VERSION_MINOR ${PLYTAPUS_MINOR_VERSION})
set(CPACK_PACKAGE_VERSION_PATCH ${PLYTAPUS_PATCH_VERSION})
set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE.md)
set(CPACK_SOURCE_IGNORE_FILES /\\\\.git;.*~)
include(CPack)
